E:39374 [!] Accept terms text, link and checkbox were not properly aligned vertically. Fixed

--- a/css/lc3.css
+++ b/css/lc3.css
@@ -2321,13 +2321,24 @@ form.estimator .main,
 }
 
 .checkout-block form.place .terms .terms-box * {
-  vertical-align: middle;
   font-size: 14px;
 }
 
+.checkout-block form.place .terms label {
+  display: block;
+  padding-left: 16px;
+  text-indent: -16px;
+}
 .checkout-block form.place .terms input {
-  margin-top: 2px;
-  margin-bottom: 0px;
+  width: 14px;
+  height: 14px;
+  padding: 0;
+  margin: 0;
+  margin-right: 4px;
+  vertical-align: bottom;
+  position: relative;
+  top: -1px;
+  *overflow: hidden;
 }
 
 .checkout-block form.place .button-row {
